[package]
name = "pizzeria_carlos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde = { version = "1", features = ["derive"] }
