[package]
name = "pizzeria_carlos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
actix-web = "4.4.1"
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15.7"
dotenv = "0.15.0"
tokio-postgres = {version="0.7.2", features=["with-uuid-0_8"]}
tokio = { version = "^1.35", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0.113"
async-trait = "0.1.77"
once_cell = "1.19.0"
mongodb = "2.8.1"
futures = "0.3.30"
